sheep-dog-asciidoc-api-svc/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sheep-dog-dev-amq
  labels:
    app: sheep-dog-dev
spec:
  selector:
    app: sheep-dog-dev-amq
  ports:
    - port: 61616
      targetPort: 61616
      name: jms
    - port: 8161
      targetPort: 8161
      name: console
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: sheep-dog-dev-db
  labels:
    app: sheep-dog-dev
spec:
  selector:
    app: sheep-dog-dev-db
  ports:
    - name: sheep-dog-dev-db
      port: 3306
      nodePort: 30306
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: sheep-dog-asciidoc-api-svc
  labels:
    app: sheep-dog-dev
spec:
  selector:
    component: sheep-dog-asciidoc-api-svc
  ports:
    - name: sheep-dog-asciidoc-api-svc
      port: 80
      targetPort: 8080
  type: ClusterIP
